Update title and description in index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-<title>Munir Zakaria | Senior Human Resources Leader</title>
-<meta name="description" content="Portfolio of Munir Zakaria, a Senior Human Resources Leader specializing in Strategic HR Professional, crisis workforce management, and international recruitment.">
+<title>Munir Zakaria | Professional Human Resources</title>
+<meta name="description" content="Portfolio of Munir Zakaria, a Professional Human Resources specializing in Strategic HR Professional, crisis workforce management, and international recruitment.">
 
 <!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
